@@ -157,6 +157,9 @@ Release 0.20.0 - Unreleased
                proceed with bootstrapping (Evgeny Ryabitskiy via Stack)
    HBASE-1301  HTable.getRow() returns null if the row does no exist
                (Rong-en Fan via Stack)
+   HBASE-1176  Javadocs in HBA should be clear about which functions are
+               asynchronous and which are synchronous
+               (Evgeny Ryabitskiy via Stack)
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
